# Banking-Management-System-CPP

./: CMakeLists.txt  README.md
database/: BMS.sql
include/BMS/: BMS.h  accountCreation.h  accountDetails.h  getCustomerID.h  printBMS.h
src/main/: BMS  CMakeLists.txt  main.cpp
